--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "bcrypt": "^1.0.3",
     "meteor-node-stubs": "^0.3.2",
     "react": "^16.2.0",
     "react-addons-pure-render-mixin": "^15.6.2",
-    "react-codemirror": "^1.0.0",
     "react-dom": "^16.2.0",
     "react-router": "^3.0.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-postcss": "^7.0.0"
   }
 }
