--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-router": "^3.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^7.2.3",
+    "cssnano": "^3.10.0",
     "gulp": "^3.9.1",
-    "gulp-postcss": "^7.0.0"
+    "gulp-postcss": "^7.0.0",
+    "postcss-import": "^11.0.0"
   }
 }
