--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.2.0",
     "react-addons-pure-render-mixin": "^15.6.2",
     "react-dom": "^16.2.0",
+    "react-json-view": "^1.14.1",
     "react-router": "^3.0.0"
   },
   "devDependencies": {
