--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "bcrypt": "^1.0.3",
+    "connect-route": "^0.1.5",
+    "express": "^4.16.2",
     "meteor-node-stubs": "^0.3.2",
     "react": "^16.2.0",
     "react-addons-pure-render-mixin": "^15.6.2",
